--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
+<link rel="import" href="../components/common/aq-check-authentication.html">
 <link rel="import" href="./aq-user-menu.html">
 <link rel='import' href='../icons/aq-iconset.html'>
 
@@ -122,7 +123,7 @@
 
         hasToken: {
           type:Boolean,
-          value:false,
+          value:true,
         },
       }, 
 
