--- a/src/layouts/aq-help-main.html
+++ b/src/layouts/aq-help-main.html
@@ -12,9 +12,7 @@
     }
   </style>
   <template>
-      <app-router mode="hash" trailingSlash="ignore">
-          <app-route path="/dashboard/help" element='aq-help-home' bindrouter=""></app-route>
-      </app-router>
+      <aq-help-home></aq-help-home>
   </template>
 
   <script>
