--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -1,6 +1,9 @@
 
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/app-route/app-route.html'>
+<link rel='import' href='../../../bower_components/app-route/app-location.html'>
 
+<link rel='import' href='../common/aq-check-authentication.html'>
 <link rel='import' href='./aq-analyze-home-menu.html'>
 <link rel='import' href='./aq-analyze-home-backtest-item2.html'>
 
@@ -45,8 +48,18 @@
 	</style>
 
 	<template>
+
+	    <app-location route="{{route}}"></app-location>
+	    <app-route
+	        route="{{route}}"
+	        pattern="/dashboard/analyze/:strategyId"
+	        data="{{routeData}}"
+	        tail="{{subroute}}"
+	        active="{{active}}">
+	    </app-route>
+
 		<iron-ajax	
-          	url="[[computeGetStrategyUrl(APIEndPoint, strategyId)]]"
+          	url="[[computeGetStrategyUrl(strategyId)]]"
      	 	method='GET'
           	id='getStrategyQuery'
           	handle-as="json"
@@ -56,7 +69,7 @@
           	debounce-duration="300">
         </iron-ajax>
 		<iron-ajax
-          	url="[[computeGetAllBacktestsUrl(APIEndPoint, strategyId)]]"
+          	url="[[computeGetAllBacktestsUrl(strategyId)]]"
      	 	method='GET'
           	id='getBacktestsQuery'
           	handle-as="json"
@@ -67,7 +80,7 @@
         </iron-ajax>
 		
 		<iron-ajax
-          	url="[[computeDeleteBacktestUrl(APIEndPoint, deleteId)]]"
+          	url="[[computeDeleteBacktestUrl(deleteId)]]"
      	 	method='DELETE'
           	id='deleteBacktestQuery'
           	handle-as="json"
@@ -76,34 +89,38 @@
           	headers='{{header}}'
           	debounce-duration="300">
         </iron-ajax>
+
+        <aq-check-authentication id='authItem'></aq-check-authentication>
 		
-		<div id='container'>
-			<template is='dom-if' if="[[!showComparison]]">
-				<aq-analyze-home-menu num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
+		<template is='dom-if' if='{{isActive(active, subroute)}}'>
+			<div id='container'>
+				<template is='dom-if' if="[[!showComparison]]">
+					<aq-analyze-home-menu num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
 
-				<p>All Backtests for <i>{{strategyName}}</i></p>
-				<div class="layout horizontal wrap flex around-justified itemcontainer" >
-				<template is='dom-repeat' items="{{backtests}}" initial-count=10>
-					<aq-analyze-home-backtest-item2 index="{{index}}" backtest="{{item}}" detail-icon=1 share-icon=1></aq-analyze-home-backtest-item2>
+					<p>All Backtests for <i>{{strategyName}}</i></p>
+					<div class="layout horizontal wrap flex around-justified itemcontainer" >
+					<template is='dom-repeat' items="{{backtests}}" initial-count=10>
+						<aq-analyze-home-backtest-item2 index="{{index}}" backtest="{{item}}" detail-icon=1 share-icon=1></aq-analyze-home-backtest-item2>
+					</template>
+					<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
+						<div class="spacer"></div>
+					</template>
+					</div>
 				</template>
-				<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
-					<div class="spacer"></div>
+
+				<template is='dom-if' if="[[showComparison]]">
+					<aq-analyze-backtest-comparison-item compare-items="[[checkedItems]]" active="[[showComparison]]">
+					</aq-analyze-backtest-comparison-item>
 				</template>
-				</div>
-			</template>
 
-			<template is='dom-if' if="[[showComparison]]">
-				<aq-analyze-backtest-comparison-item compare-items="[[checkedItems]]" active="[[showComparison]]">
-				</aq-analyze-backtest-comparison-item>
-			</template>
+			</div>	
 
-		</div>	
-
-	    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
-			 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"	
-			 cancel="Cancel"
-			 accept="OK">
-    	</aq-delete-dialog>
+		    <aq-delete-dialog id ="deleteDialog" heading="Delete Backtests"
+				 message="Are you sure to delete [[checkedCount]] backtest[[getMessageSuffix(checkedCount)]]?"	
+				 cancel="Cancel"
+				 accept="OK">
+	    	</aq-delete-dialog>
+		</template>
 
     </template>
 
@@ -115,13 +132,14 @@
 
     			strategyName: String,
 
-    			strategyId: String,
+    			strategyId: {
+					type:String,
+    				//observer:'_strategyIdChanged',
+				},
 
     			backtests: {
     				type:Array,
        			},
-
-       			backtestId:String,
 
        			deleteId: String,
 
@@ -140,7 +158,11 @@
 					value:false,
 				},
 
-				APIEndPoint:String, 
+				active:{
+					type: Boolean,
+					value: false,
+					observer:'_activeChanged',
+				}
 
     		}, 
     		
@@ -155,39 +177,28 @@
 				'detail-action':'onDetail',
 			},
 
-			ready: function() {
-	          	var x = localStorage.getItem('my-app-storage');
-		        var user = JSON.parse(x).user;
-		        if (user.token) {
-		          this.header = {
-		            "aimsquant-token": user.token,
-		            "Content-Type": "application/json"};  
-		        }
-		        this.APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
-	      	},
 
-	      	computeGetStrategyUrl: function(APIEndPoint, strategyId) {
+	      	computeGetStrategyUrl: function(strategyId) {
+	      		var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
 	      		return APIEndPoint+'/strategy/'+strategyId;
 	      	},
 
-	      	computeDeleteBacktestUrl: function(APIEndPoint, deleteId){
+	      	computeDeleteBacktestUrl: function(deleteId){
+	      		var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
 	      		return APIEndPoint+'/backtest/'+deleteId;
 	      	},
 
-	      	computeGetAllBacktestsUrl: function(APIEndPoint, strategyId){
+	      	computeGetAllBacktestsUrl: function(strategyId){
+	      		var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
 	      		return APIEndPoint+'/strategy/'+strategyId+'/backtests';
 	      	},
 
-	      	attached: function() {
-	      		this.$.getStrategyQuery.generateRequest();
-	      	},
-
 			goToEditor: function() {
-				this.router.go('/dashboard/editor');
+				this.fire('rt-changed', {route:'/dashboard/editor'});
 			},
 
 			goToShare: function(e) {
-    			this.router.go('/dashboard/community/create/'+e.detail.id);
+    			this.fire('rt-changed' ,{route:'/dashboard/community/create/'+e.detail.id});
 			},
 
 			isBacktestCountOdd: function(backtests) {
@@ -272,7 +283,32 @@
 	        onDetail: function(e) {  
 	        	//console.log(this.router);
 	        	e.stopPropagation();    	
-	        	this.router.go('/dashboard/analyze/' + this.strategyId+'/'+ e.detail.id);
+	        	this.fire('rt-changed', {route:'/dashboard/analyze/' + this.strategyId+'/'+ e.detail.id});
+	        },
+
+	        hasTail: function(tail) {
+	        	if(tail && tail.path) {
+	        		return tail.path.length > 0;
+	        	}
+
+	        	return false;
+	        },
+
+	        isActive: function(active, subroute) {
+	        	return active && !this.hasTail(subroute);
+	        },
+
+	        _activeChanged: function(nAct, oAct) {
+	        	console.log("Here I Come");
+	        	if(nAct && !this.hasTail(this.subroute)) {
+	        		this.strategyId = this.routeData.strategyId;
+	        		if(this.$.authItem.checkHasToken()) {
+		        		this.header = this.$.authItem.getHeader();
+		        		this.$.getBacktestsQuery.generateRequest();		
+		        	} else{
+	        			this.backtests = [];
+	        		}	
+        		}
 	        },
 
     	});
