--- a/src/components/aq-aboutpage.html
+++ b/src/components/aq-aboutpage.html
@@ -1,8 +1,7 @@
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
-
-<dom-module id="aq-aboutpage" scroll-target="tabs">
+<dom-module id="aq-aboutpage">
 
     <style include="iron-flex iron-flex-alignment"></style>
 
@@ -25,40 +24,54 @@
 
     <template>
 
-    <div style="background-color: #f6fcfa">
+        <app-location route="{{route}}"></app-location>
+        <app-route
+            route="{{route}}"
+            pattern="/about"
+            active="{{active}}">
+        </app-route>
 
-    <aq-section id='section_home' 
-                class="self-center" header="Invest in your Ideas" 
-                tagline=""
-                paragraph="We believe that in ever expanding financial markets it is important to systematically scrutinize investment ideas and separate real investment signals from noise. At AimsQuant, we are building an easy to use web platform to systematically research investment ideas."
-                paragraph2="AimsQuant aims to bridge the data and technology gap between investment enthusiasts and great investments. We want to build an ecosystem where data scientists, quantitative analysts, programmers and investment enthusiasts come together to create the best investment ideas.">
-    </aq-section>  
-    
-    <aq-section id='section_people' 
-                class="self-center" header="Who Are We"
-                paragraph="We are bunch of Quants and Technologists who enjoy financial markets and making efficient technology. We aim to simplify investment science and filter noise from real investment ideas">
-    </aq-section>
+         <app-route
+            route="{{route}}"
+            pattern="/about/:section"
+            data="{{routeData}}">
+        </app-route>
 
-    <aq-section id='section_careers' 
-                class="self-center" header="Work With Us"
-                paragraph="We are recruiting highly motivated individuals interested in technology and financial markets. If you like to solve problems and build efficient technology, send us a message at"
-                link="mailto:careers@aimsquant.com?Subject=Interested%20in%20AimsQuant"
-                link-text="careers@aimsquant.com"
-                paragraph2="We are using NodeJS to power our backend, Polymer to create our UI and Julia to create a fast research engine. If you have interest in any of the above technologies, send us a message and we will be glad to talk to you.">
+        <template is='dom-if' if='{{active}}'>
+            <div style="background-color: #f6fcfa">
 
-    </aq-section>
+            <aq-section id='section_home' 
+                        class="self-center" header="Invest in your Ideas" 
+                        paragraph="We believe that in ever expanding financial markets it is important to systematically scrutinize investment ideas and separate real investment signals from noise. At AimsQuant, we are building an easy to use web platform to systematically research investment ideas."
+                        paragraph2="AimsQuant aims to bridge the data and technology gap between investment enthusiasts and great investments. We want to build an ecosystem where data scientists, quantitative analysts, programmers and investment enthusiasts come together to create the best investment ideas.">
+            </aq-section>  
+            
+            <aq-section id='section_people' 
+                        class="self-center" header="Who Are We"
+                        paragraph="We are bunch of Quants and Technologists who enjoy financial markets and making efficient technology. We aim to simplify investment science and filter noise from real investment ideas">
+            </aq-section>
+
+            <aq-section id='section_careers' 
+                        class="self-center" header="Work With Us"
+                        paragraph="We are recruiting highly motivated individuals interested in technology and financial markets. If you like to solve problems and build efficient technology, send us a message at"
+                        link="mailto:careers@aimsquant.com?Subject=Interested%20in%20AimsQuant"
+                        link-text="careers@aimsquant.com"
+                        paragraph2="We are using NodeJS to power our backend, Polymer to create our UI and Julia to create a fast research engine. If you have interest in any of the above technologies, send us a message and we will be glad to talk to you.">
+
+            </aq-section>
 
 
-    <aq-section id='section_contact' 
-                class="self-center" header="Contact Us"
-                paragraph="We always welcome insightful thoughts, great mentors and helpful suggestions. Please write us at"
-                link= "mailto:connect@aimsquant.com?Subject=Connect%20With%20AimsQuant"
-                link-text="connect@aimsquant.com">
-    </aq-section>
+            <aq-section id='section_contact' 
+                        class="self-center" header="Contact Us"
+                        paragraph="We always welcome insightful thoughts, great mentors and helpful suggestions. Please write us at"
+                        link= "mailto:connect@aimsquant.com?Subject=Connect%20With%20AimsQuant"
+                        link-text="connect@aimsquant.com">
+            </aq-section>
 
-    
-    <footer><p>© 2016 AimsQuant</p></footer>
-  </div>  
+            
+            <footer><p>© 2016 AimsQuant</p></footer>
+          </div>  
+      </template>
     
   </template>
 
@@ -70,17 +83,43 @@
       properties: {
           section: {
               type: String,  
-              value:"home",
+              //value:"home",
+              //observer:'_sectionChanged',
           },
       },
 
-  		attached: function() {
-          console.log(this.section);
-		      this.fire('tabChanged',{tab:2});
-          console.log(this.$$('#section_' + this.section));
-          console.log(this.$$('#section_' + this.section).scrollIntoView(true));
-		  },
+      observers:['_activeChanged(active, routeData)', '_sectionChanged(active, section)'],
 
+      _activeChanged: function(active, routeData) {        
+        console.log("About Page: " + active);
+        console.log(this.routeData.section);
+        if (active) {
+          if(this.routeData.section) {
+            this.section = this.routeData.section;
+          } else {
+            console.log("hahahaha");
+            this.section = 'home';
+          }
+        }
+
+        //this.fire('tabChanged',{tab:2});     
+        
+      },
+
+      _sectionChanged: function(active, section) {
+          if (active) {
+            console.log(section);
+            console.log(this.$$('#section_' + section));
+            if(this.$$('#section_' + section)) {
+              //this.$$('#section_' + section).scrollIntoView(true);
+            } 
+          }
+      },
+
+      attached: function() {
+        console.log("attached");
+         //this.$$('#section_home').scrollIntoView(true);
+      }
 
     });
 
