--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -5,7 +5,10 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 <link rel='import' href='../../../bower_components/paper-tooltip/paper-tooltip.html'>
+<link rel='import' href='../../../bower_components/app-route/app-route.html'>
+<link rel='import' href='../../../bower_components/app-route/app-location.html'>
 
+<link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="./aq-community-home-searchbar.html">
 <link rel="import" href="./aq-community-home-post-item2.html">
 <link rel='import' href='../common/aq-pagination.html'>
@@ -50,8 +53,8 @@
           width: 95%;
           margin-left: 2%;
           
-          overflow-y: scroll;
-          height: 100%;
+          --overflow-y: scroll;
+          --height: 100%;
         }
 
 
@@ -107,8 +110,19 @@
     </style>
     <template>
 
+        <aq-check-authentication id='authItem'></aq-check-authentication>
+        <app-location route="{{route}}"></app-location>
+
+        <app-route
+            route="{{route}}"
+            pattern="/dashboard/community"
+            data="{{routeData}}"
+            tail="{{subroute}}"
+            active="{{active}}">
+        </app-route>
+
         <iron-ajax
-            url="[[APIEndPoint]]/thread"
+            url=""
             method='GET'
             id='getAllThreadsQuery'
             params='[[searchParam]]'
@@ -119,65 +133,61 @@
             debounce-duration="300">
         </iron-ajax>
 
-        <!--iron-localstorage
-          id = "localStorage"
-          name = "my-app-storage" 
-          value = "{{aimsquant}}">
-        </iron-localstorage-->
+        <template is='dom-if' if='{{isActive(active, subroute)}}'>
+              <div id='container' class="layout vertical flex">
+                
+                <div class="layout horizontal wrap">
+                  <div id="header">
+                    <p> AimsQuant Community</p>
+                    <i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>
+                  </div>
 
-        <div id='container' class="layout vertical flex">
-            
-            <div class="layout horizontal wrap">
-              <div id="header">
-                <p> AimsQuant Community</p>
-                <i style="margin-bottom:50px; color:teal;">Share, Learn and Code</i>
-              </div>
-
-              <div class="flex"></div>
-  
-              <aq-community-home-searchbar id='searchbar' 
-                                      class="self-end"
-                                      active="[[isSearchActive(searchText)]]"
-                                      search-value="[[searchText]]">
-              </aq-community-home-searchbar> 
-            
-            </div>
-         
-            <template is='dom-if' if='[[isSearchActive(searchText)]]'>
-              <p style="font-size: 16px;">Search results for: 
-                <i>"[[searchText]]"</i>
-              </p>
-            </template>
-          
-            <paper-tabs on-iron-select="onActivateTab" id="community-tabs" selected="{{selected}}" noink>
-                <paper-tab id="popular">Popular</paper-tab>
-                <paper-tab id="newest">Newest</paper-tab>
-                <paper-tab id="following">Following</paper-tab>
-                <paper-tab id="personal">Personal</paper-tab>
-            </paper-tabs>
-
-            <div clas="layout vertical" id='allposts'>
-                <template is="dom-repeat" items="{{threads}}">
-                    <aq-community-home-post-item2 thread="[[item]]">
-                    </aq-community-home-post-item2>
+                  <div class="flex"></div>
+      
+                  <aq-community-home-searchbar id='searchbar' 
+                                          class="self-end"
+                                          active="[[isSearchActive(searchText)]]"
+                                          search-value="[[searchText]]">
+                  </aq-community-home-searchbar> 
+                
+                </div>
+             
+                <template is='dom-if' if='[[isSearchActive(searchText)]]'>
+                  <p style="font-size: 16px;">Search results for: 
+                    <i>"[[searchText]]"</i>
+                  </p>
                 </template>
+              
+                <paper-tabs on-iron-select="onActivateTab" id="community-tabs" selected="{{selected}}" noink>
+                    <paper-tab id="popular">Popular</paper-tab>
+                    <paper-tab id="newest">Newest</paper-tab>
+                    <paper-tab id="following">Following</paper-tab>
+                    <paper-tab id="personal">Personal</paper-tab>
+                </paper-tabs>
+
+                <div clas="layout vertical" id='allposts'>
+                    <template is="dom-repeat" items="{{threads}}">
+                        <aq-community-home-post-item2 thread="[[item]]">
+                        </aq-community-home-post-item2>
+                    </template>
+                </div>
+
+                <div class="flex"></div>
+
+                <template is='dom-if' if='[[hasThreads(threads)]]'>
+                    <aq-pagination class="self-center" 
+                                    per-page="[[perPage]]"   
+                                    current-page="{{currentPage}}"
+                                    total-threads="[[totalThreads]]">
+                    </aq-pagination>
+                </template>
+            
             </div>
+            
+            <paper-fab id='fab' noink icon="aq-icons:add" on-tap='createPost'></paper-fab>
 
-            <div class="flex"></div>
-
-            <template is='dom-if' if='[[hasThreads(threads)]]'>
-                <aq-pagination class="self-center" 
-                                per-page="[[perPage]]"   
-                                current-page="{{currentPage}}"
-                                total-threads="[[totalThreads]]">
-                </aq-pagination>
-            </template>
-        
-        </div>
-        
-        <paper-fab id='fab' noink icon="aq-icons:add" on-tap='createPost'></paper-fab>
-
-        <paper-tooltip for='fab' offset="2" class='self-center iconTooltip' position="top" animation-delay="0" fit-to-visible-bounds>New Post</paper-tooltip>
+            <paper-tooltip for='fab' offset="2" class='self-center iconTooltip' position="top" animation-delay="0" fit-to-visible-bounds>New Post</paper-tooltip>
+        </template>
         
     </template>
     <script>
@@ -197,7 +207,8 @@
                 },
 
                 threads: {
-                    type: Object,
+                    type: Array,
+                    value:[],
                 },
 
                 searchParam:{
@@ -216,7 +227,7 @@
 
                 currentPage: {
                   type:Number,
-                  //value:1,
+                  value:1,
                   observer: '_currentPageChanged',
                 },
 
@@ -242,7 +253,9 @@
                   computed: 'isSelected(selected, 2)'
                 },
 
-                APIEndPoint:String,
+                active:{
+                  type:Boolean,
+                },
 
             },
 
@@ -251,7 +264,9 @@
               'view-action':'onView',
             },
 
-            ready: function() {
+            observers:['_activeChanged(active, subroute)'],
+
+            /*ready: function() {
                 var x = localStorage.getItem('my-app-storage');
                 var user = JSON.parse(x).user;
                 if (user.token) {
@@ -260,14 +275,9 @@
                     "Content-Type": "application/json"};  
                 }
 
-                this.APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
-
-                //this.orderby = "views";
-                 
-            },
+            },*/
 
             attached: function() {
-              console.log("2");
               var x = localStorage.getItem('my-app-storage');
               if (x) {
                   var community = JSON.parse(x).community;
@@ -278,7 +288,13 @@
                       this.selected = community.searchTab;
                       this.currentPage = community.lastPage;
                   } 
-              }               
+              }
+
+              this.processparams();
+
+              /*var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+              this.$.getAllThreadsQuery.url = APIEndPoint + '/thread'; 
+              this.$.getAllThreadsQuery.generateRequest();  */            
             },
 
             isSelected: function(selected, selection) {
@@ -310,11 +326,11 @@
                 this.updateCommunityState();
 
                 if (!this.header) {
-                  this.router.go('/user/signin', {lastRequest:'/dashboard/community/create'});
-                  return;
+                  this.fire('rt-changed',{route:'/user/signin'});
+                  
                 }
 
-                this.router.go('/dashboard/community/create');
+                this.fire('rt-changed',{route:'/dashboard/community/create'});
             },
 
             onSearch: function(e) {
@@ -348,11 +364,26 @@
               this.updateCommunityState();
               
               this.searchParam = {"skip":this.perPage*(this.currentPage -1), "limit":this.perPage, "order":"-1", "q":this.searchText, "order_param":this.orderby, "personal":this.isPersonal(), "following": this.isFollowing(), "category": this.searchCategory};
-
-              this.$.getAllThreadsQuery.generateRequest();
+  
+              this.fetchResults();
+            
             },
 
-            _currentPageChanged: function(newPage, oldPage) {       
+            fetchResults: function() {
+                console.log("fetchResults");
+                if(this.$.authItem.checkHasToken()) {
+                  console.log("fetchResults + inside");
+                  this.header = this.$.authItem.getHeader();
+                  var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+                  this.$.getAllThreadsQuery.url = APIEndPoint + '/thread'; 
+                  this.$.getAllThreadsQuery.generateRequest();   
+
+                }
+            },
+
+            _currentPageChanged: function(newPage, oldPage) {      
+                //console.log(newPage); 
+                //console.log(oldPage);
                 this.processparams(); 
             },
 
@@ -373,14 +404,35 @@
               }
             },*/
 
-           
-
             isSearchActive: function(searchText) {
                 return searchText.length > 0;
             },
 
             hasThreads: function(threads) {
               return threads.length > 0;
+            },
+
+            hasTail: function(tail) {
+              if(tail && tail.path) {
+                return tail.path.length > 0;
+              }
+
+              return false;
+            },
+
+            isActive: function(active, subroute) {
+              //console.log("Community Home Active: "+ (active && !this.hasTail(subroute)))
+              return active && !this.hasTail(subroute);
+            },
+
+            _activeChanged: function(active, subroute) {
+                console.log("Community Home Active: " + active);
+                if(active && !this.hasTail(this.subroute)) {
+                    console.log("Processing");
+                    this.processparams();   
+                } else {
+                  this.threads = [];
+                }
             },
 
 
