--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -51,24 +51,24 @@
   </style>
 
   <template>
-    <div id='post-content'>
-      <div id='author' class="layout horizontal">
-        <profile-img id='img' letter="[[getinitials(postContent)]]" class="self-end"></profile-img>
-         <div id='author-desc' class="layout vertical self-center">
-              <span id="author-name">[[postContent.user.firstName]] [[postContent.user.lastName]]
-            <i style="color:teal">on [[format(postContent.updatedAt)]]</i></span>
+         <div id='post-content'>
+          <div id='author' class="layout horizontal">
+            <profile-img id='img' letter="[[getinitials(postContent)]]" class="self-end"></profile-img>
+             <div id='author-desc' class="layout vertical self-center">
+                  <span id="author-name">[[postContent.user.firstName]] [[postContent.user.lastName]]
+                <i style="color:teal">on [[format(postContent.updatedAt)]]</i></span>
+              </div>
           </div>
-      </div>
 
 
-      <aq-help-marked-item help-text="[[postContent.markdownText]]"></aq-help-marked-item>
+          <aq-help-marked-item help-text="[[postContent.markdownText]]"></aq-help-marked-item>
 
-      <template is='dom-if' if="[[isValidBacktestId(postContent)]]">
-          <aq-backtest-detail-item backtest-id="[[getBacktestId(postContent)]]">
-          </aq-backtest-detail-item>
-      </template>
+          <template is='dom-if' if="[[isValidBacktestId(postContent)]]">
+              <aq-backtest-detail-item backtest-id="[[getBacktestId(postContent)]]">
+              </aq-backtest-detail-item>
+          </template>
 
-    </div>
+        </div>
 
   </template>
 
@@ -79,7 +79,7 @@
         postContent: Object,  
       },
 
-      ready: function() {
+     /* ready: function() {
           var x = localStorage.getItem('my-app-storage');
           var user = JSON.parse(x).user;
           if (user.token) {
@@ -88,10 +88,22 @@
               "Content-Type": "application/json"};  
           }
                     
+      },*/
+
+      hasContent: function(item) {
+        console.log(item && Object.keys(item).length>0);
+        if(item) {
+          return Object.keys(item).length > 0;
+        }
+
+        return false;
       },
 
       getinitials: function(item) {
-        return item.user.firstName[0] + item.user.lastName[0];
+        if(item && item.user) {
+          return item.user.firstName[0] + item.user.lastName[0];
+        } else
+        return "";
       },
 
       format: function(date) {
