--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
 
 <link rel="import" href="./aq-community-postdetail-content.html">
 <link rel="import" href="../profile-img.html">
@@ -70,45 +71,23 @@
     }
 
     paper-tooltip.iconTooltip {
-          --paper-tooltip: {
-              font-size: 13px;
-              min-width: 40px;
-              text-align: center;
-          }
+        --paper-tooltip: {
+            font-size: 13px;
+            min-width: 40px;
+            text-align: center;
+        }
 
-          --paper-tooltip-opacity: 1.0;
+      --paper-tooltip-opacity: 1.0;
       --paper-tooltip-background: teal;
     }
 
-
-
   </style>
+
   <template>
-
-    <div id='post-header'>
-      <div id='heading'>
-        <span>[[postHeader.title]]</span>
-      </div>
-
-      <div class="layout horizontal">
-        <span id='category' class="self-top"><i>[[postHeader.category]]</i></span>
-        <div class="flex"></div>
-
-        <template is="dom-if" if="[[hasFollowers(followers)]]">
-          <span id='followers' class="self-end">[[followers.length]] Followers</span>
-        </template>
-        <paper-icon-button  id='followIcon' disabled="[[preview]]" toggles=1 icon="vaadin-icons:megafone" on-tap='onFollow'></paper-icon-button>
-      </div>
-
-      <aq-community-postdetail-content post-content="[[postHeader]]"></aq-community-postdetail-content> 
-
-    </div>
-
-    <paper-tooltip for='followIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>[[computeFollowTitle(followers)]]</paper-tooltip>
-      
-
+    <aq-check-authentication id='authItem'></aq-check-authentication>
+    
     <iron-ajax
-      url="[[computeFollowPostUrl(APIEndPoint, postHeader._id)]]"
+      url=""
       method="POST"
       id='follows'
       handle-as="json"
@@ -117,6 +96,29 @@
       debounce-duration="300">
     </iron-ajax>
 
+
+        <div id='post-header'>
+          <div id='heading'>
+            <span>[[postHeader.title]]</span>
+          </div>
+
+          <div class="layout horizontal">
+            <span id='category' class="self-top"><i>[[postHeader.category]]</i></span>
+            <div class="flex"></div>
+
+            <template is="dom-if" if="[[hasFollowers(followers)]]">
+              <span id='followers' class="self-end">[[followers.length]] Followers</span>
+            </template>
+            <paper-icon-button id='followIcon' disabled="[[preview]]" toggles=1 icon="vaadin-icons:megafone" on-tap='onFollow'></paper-icon-button>
+          </div>
+
+          <aq-community-postdetail-content post-content="[[postHeader]]"></aq-community-postdetail-content> 
+
+        </div>
+
+        <paper-tooltip for='followIcon' offset="2" class=' self-center iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>[[computeFollowTitle(followers)]]</paper-tooltip>
+
+  
   </template>
 
   <script>
@@ -137,17 +139,18 @@
           type:Array,
           value:[],
         },
-
-        APIEndPoint:String,
       },
 
       attached: function() {
+        console.log("attached header");
+        console.log(this.postHeader.followers);
+        
         if (this.postHeader.followers) {
           this.followers = this.postHeader.followers;
         }
       },
 
-      ready: function() {
+      /*ready: function() {
           var x = localStorage.getItem('my-app-storage');
           var user = JSON.parse(x).user;
           if (user.token) {
@@ -156,21 +159,31 @@
               "Content-Type": "application/json"};  
           }
  
+      },*/
+
+      hasPostHeader: function(postHeader) {
+          if (postHeader) {
+            return Object.keys(postHeader).length > 0;
+          }
+
+          return false;
       },
 
-      computeFollowPostUrl: function(APIEndPoint, threadId) {
-        return APIEndPoint+'/thread/'+ threadId+'/follow';
+      computeFollowPostUrl: function(postHeader) {
+        var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+        return APIEndPoint+'/thread/'+ postHeader._id+'/follow';
       },
 
       onFollow: function() {
-        if(!this.header) {
-          this.router.go('/user/signin', {lastRequest:('/dashboard/community/topics/[[postHeader._id]]')});
-          return;
+        console.log("Hola Follow");
+        if(this.$.authItem.checkHasToken()) {
+            console.log("Hola Follow2");
+            this.header = this.$.authItem.getHeader();
+            this.$.follows.url = this.computeFollowPostUrl(this.postHeader);
+            this.$.follows.generateRequest();
+        } else {
+            this.fire('rt-changed', {route:'/user/signin'});
         }
-        
-        this.APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
-         
-        this.$.follows.generateRequest();
       },
 
       hasFollowers: function(followers) {
@@ -178,27 +191,33 @@
       },
 
       onFollowThreadResponse: function(e) {
-        this.followers = e.detail.response.followers;
+          console.log(e.detail.response);
+          this.followers = e.detail.response;
       },
 
       computeFollowTitle: function(followers){
-        var x = localStorage.getItem('my-app-storage');
-        var userId = JSON.parse(x).user._id;
+          console.log(this.postHeader);
+          console.log(this.$$('#followIcon'));
+          if(this.$.authItem.checkHasToken()) {
+              var user = this.$.authItem.getUser(); 
+             
+              var userId = user._id;
 
-        if (followers.indexOf(userId) > -1){
-          // Change the icon color too
-          this.$.followIcon.style.color = 'white';
-          this.$.followIcon.style.backgroundColor = '#cc6666';
-          this.$.followIcon.style.outlineColor = '#cc6666';
-          return "UnFollow";
-          //this.$.followIcon
+              if (followers.indexOf(userId) > -1){
+                // Change the icon color too
+                this.$$('#followIcon').style.color = 'white';
+                this.$$('#followIcon').style.backgroundColor = '#cc6666';
+                this.$$('#followIcon').style.outlineColor = '#cc6666';
+                return "UnFollow";
+                //this.$.followIcon
 
-        }
+              }
 
-        this.$.followIcon.style.color = '#cc6666';
-        this.$.followIcon.style.backgroundColor = 'white';
+              this.$$('#followIcon').style.color = '#cc6666';
+              this.$$('#followIcon').style.backgroundColor = 'white';
 
-        return "Follow";
+              return "Follow";
+          }
 
       },
 
