--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -1,10 +1,11 @@
 
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
+
+<link rel='import' href='../common/aq-check-authentication.html'>
 <link rel='import' href='./aq-editor-home-elementmenu.html'>
 <link rel='import' href='./aq-editor-home-menu.html'>
 <link rel='import' href='./aq-editor-home-strategy-item.html'>
-
 
 <link rel='import' href='../../dialog/aq-delete-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-input-dialog.html'>
@@ -105,10 +106,20 @@
 
 	<template>
 		<!--iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query-->
+        <aq-check-authentication id='authItem'></aq-check-authentication>
+        <app-location route="{{route}}" ></app-location>
+        
+        <app-route
+            route="{{route}}"
+            pattern="/dashboard/editor"
+            data="{{routeData}}"
+            tail="{{subroute}}"
+            active="{{active}}"
+            query-params="{{queryParams}}">
+        </app-route>
 
-		<iron-ajax
-	    	  auto	
-              url="http://localhost:3002/api/v2/strategy"
+        <iron-ajax
+              url=""
               method='GET'
               params="[[searchParam]]"
               id='getStrategiesQuery'
@@ -120,7 +131,7 @@
         </iron-ajax>
 
         <iron-ajax	
-              url="http://localhost:3002/api/v2/strategy/[[deleteId]]"
+              url="[[computPostDeleteStrategyUrl(deleteId)]]"
               method='DELETE'
               id='deleteStrategyQuery'
               handle-as="json"
@@ -130,45 +141,45 @@
               debounce-duration="300">
         </iron-ajax>
 
-        	
-        <div id='container'>
-	  		
-	  		<aq-editor-home-menu active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
+        <template is='dom-if' if='{{isActive(active, subroute)}}'>
+          <div id='container'>
+  	  		
+  	  		<aq-editor-home-menu active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
 
-	  		<div id="ifsearch">
-	  			<p>Strategy results for: 
-	  				<i>"[[searchParam.search]]"</i>
-  				</p>
-	  		</div>
+  	  		<div id="ifsearch">
+  	  			<p>Strategy results for: 
+  	  				<i>"[[searchParam.search]]"</i>
+    				</p>
+  	  		</div>
 
-		    <div class="header" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
-		      <div class="name">Name<span class="narrow">/Description</span></div>
-		      <div class="description">Description</div>
-		      <div class="backtest">#Backtests</div>
-		    </div>
-            
-	    	<template is="dom-repeat" items="{{strategies}}" id='strategyList'>
-	    		<aq-editor-home-strategy-item										strategy-name = "[[item.name]]"
-							num-backtest = "[[item.backtests]]"
-							strategy-desc = "[[item.description]]"
-							strategy-id = "[[item._id]]">
-				</aq-editor-home-strategy-item>	
-	    	</template>
-	
+  		    <div class="header" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
+  		      <div class="name">Name<span class="narrow">/Description</span></div>
+  		      <div class="description">Description</div>
+  		      <div class="backtest">#Backtests</div>
+  		    </div>
+              
+  	    	<template is="dom-repeat" items="{{strategies}}" id='strategyList'>
+  	    		<aq-editor-home-strategy-item										strategy-name = "[[item.name]]"
+  							num-backtest = "[[item.backtests]]"
+  							strategy-desc = "[[item.description]]"
+  							strategy-id = "[[item._id]]">
+  				</aq-editor-home-strategy-item>	
+  	    	</template>
+  	
 
-		    <aq-delete-dialog id ="dialog" heading="Delete Strategies"
-		    						 message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"	
-		    						 cancel="Cancel"
-		    						 accept="OK">
-	    	</aq-delete-dialog>
+  		    <aq-delete-dialog id ="dialog" heading="Delete Strategies"
+  		    						 message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"	
+  		    						 cancel="Cancel"
+  		    						 accept="OK">
+  	    	</aq-delete-dialog>
 
-	    	
-	    	<aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
+  	    	<aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
 
-	    	<aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
-		    
-		    <!--div id="actions"></div-->
-		</div> 
+  	    	<aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
+  		    
+  		    <!--div id="actions"></div-->
+  		</div> 
+    </template>
 		
   </template>
 
@@ -179,7 +190,7 @@
 		
 		properties: {
 			strategies: {
-				type: Object,
+				type: Array,
 			},
 			
 			color: { type: String },
@@ -201,38 +212,51 @@
 
 			create: {
 				type:Number,
-				vaue:0,
+				value:0,
+        observer:'_createChanged',
 			},
 
 			deleteId: String,
 
 			searchParam:Object,
 
+      active:{
+        type: Boolean,
+      },
+
 		},
 
+    observers:['_activeChanged(active, subroute, queryParams)'],
+
 		attached: function() {
-			if (this.create == 1){
+      if (this.create == 1){
 				this.fire('newClicked');
 			}
 		},
 
-		ready: function() {
-            var x = localStorage.getItem('my-app-storage');
-	        var user = JSON.parse(x).user;
-	        if (user.token) {	
-	          this.header = {
-	            "aimsquant-token": user.token,
-	            "Content-Type": "application/json"};  
-	        } 
-        },
+		/*ready: function() {
+      var x = localStorage.getItem('my-app-storage');
+      var user = JSON.parse(x).user;
+      if (user.token) {	
+        this.header = {
+          "aimsquant-token": user.token,
+          "Content-Type": "application/json"};  
+      } 
 
-        onGetStrategiesResponse: function(data) {
-        	this.strategies = data.detail.response;	
-        },
+    },*/
+
+    computPostDeleteStrategyUrl: function(deleteId) {
+      var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+      return APIEndPoint+'/strategy/'+deleteId;
+    },
+
+    onGetStrategiesResponse: function(data) {
+    	 this.strategies = data.detail.response;	
+    },
 
 		onGetStrategiesError: function(data) {
-        	//this.router.go('/user/signin');
-        },        
+    	 //this.router.go('/user/signin');
+    },        
 
 		listeners: {
 			//'mouseover': '_mouseOver',
@@ -344,108 +368,158 @@
 		},
 
 		click: function() {
-			this.router.go('/dashboard')
+			this.fire('rt-changed',{route:'/dashboard'});
 		},
 
 	 	goToAnalyze: function(e) {
         
-	 		// if strategy analyzed is called from elementmenu
-        	if(!e.detail.id) {
-    	 		e.detail.id = this._currentRow.id;
-        	}
-        	
-        	//this.router.go('/dashboard/analyze/' + strategyId);
-        },
+		// if strategy analyzed is called from elementmenu
+    	if(!e.detail.id) {
+	 		  e.detail.id = this._currentRow.id;
+    	}
+    	
+    	//this.router.go('/dashboard/analyze/' + strategyId);
+    },
 
-        /*goToAnalyzeFromEditor: function(e) {
-        	var strategyId = e.detail.id;
-        	this.router.go('/dashboard/analyze/' + strategyId);
-        },*/
+    /*goToAnalyzeFromEditor: function(e) {
+    	var strategyId = e.detail.id;
+    	this.router.go('/dashboard/analyze/' + strategyId);
+    },*/
 
-        goToClone: function(e) {
-        	var strategyId = this._currentRow.id;
+    goToClone: function(e) {
+    	var strategyId = this._currentRow.id;
 
-        	for (i in this.strategies) {
-        		if(strategyId == this.strategies[i]._id) {
-        			e.detail["strategy"] = this.strategies[i]
-        			break;
-        		}
-        	}
-        	//Let the event propagate. It's handled in editor-main.   	
-        },
-
-        goToShare: function() {
-        	strategyId = this._currentRow.id;
-        	this.router.go('/dashboard/community/create/'+strategyId+"?share=strategy");
-        },
-
-        goToEditor: function(e) {
-        	//var strategyId = this._currentRow.id;
-        	var strategyId = e.detail.id;
-        	this.router.go('/dashboard/editor/' + strategyId);
-        },
-
-        checkStrategy: function(e) {
-        	var checked = e.detail.checked;
-
-        	this.checkedItems[e.detail.id] = e.detail.checked;
-
-        	if (checked == true) {
-        		this.checkedCount += 1;
-        	} else {
-        		this.checkedCount -= 1;
-        	}
-        },
-
-        hasCheckedStrategies: function(checkedCount) {
-        	return checkedCount > 0;
-        },
-
-        getMessageSuffix: function(checkedCount) {
-        	return checkedCount > 1 ? "ies" :"y";
-        },
-
-        onSearch: function(e) {
-        	searchtext = e.detail.searchtext;
-        	
-        	if(searchtext!="") {
-        		this.$$('#ifsearch').style.display = 'block';
-        	} else {
-        		this.$$('#ifsearch').style.display = 'none';
-        	}
-
-        	this.searchParam = {"search":searchtext};
-        },
-
-        onDeletion: function() {
-        	//Send DELETE request to backend
-        	for (key in this.checkedItems) {
-        		for (i in this.strategies) {		
-        			if (key == this.strategies[i]._id && this.checkedItems[key]==true) {
-        				this.deleteId = this.strategies[i]._id;
-        				this.$.deleteStrategyQuery.generateRequest();
-        				//this.splice('strategies', i, 1);
-        				//this.checkedCount -= 1;
-        			}
-        		}
+    	for (i in this.strategies) {
+    		if(strategyId == this.strategies[i]._id) {
+    			e.detail["strategy"] = this.strategies[i]
+    			break;
     		}
+    	}
+    	//Let the event propagate. It's handled in editor-main.   	
+    },
 
-    		this.deleteId = "";	        	
-        },
+    goToShare: function() {
+    	strategyId = this._currentRow.id;
+    	this.fire('rt-changed', {route:'/dashboard/community/create/'+strategyId+"?share=strategy"});
+    },
 
-        onDeleteStrategyError: function() {
+    goToEditor: function(e) {
+    	//var strategyId = this._currentRow.id;
+    	var strategyId = e.detail.id;
+    	this.fire('rt-changed',{route:'/dashboard/editor/' + strategyId});
+    },
 
-        },
+    checkStrategy: function(e) {
+    	var checked = e.detail.checked;
 
-        onDeleteStrategyResponse: function(data) {
-        	var idDeleted = data.detail.response.id;
-        	for (i in this.strategies) {	
-    			if (idDeleted == this.strategies[i]._id) {
-    				this.splice('strategies', i, 1);
-    				this.checkedCount -= 1;
+    	this.checkedItems[e.detail.id] = e.detail.checked;
+
+    	if (checked == true) {
+    		this.checkedCount += 1;
+    	} else {
+    		this.checkedCount -= 1;
+    	}
+    },
+
+    hasCheckedStrategies: function(checkedCount) {
+    	return checkedCount > 0;
+    },
+
+    getMessageSuffix: function(checkedCount) {
+    	return checkedCount > 1 ? "ies" :"y";
+    },
+
+    onSearch: function(e) {
+    	searchtext = e.detail.searchtext;
+    	
+    	if(searchtext!="") {
+    		this.$$('#ifsearch').style.display = 'block';
+    	} else {
+    		this.$$('#ifsearch').style.display = 'none';
+    	}
+
+    	this.searchParam = {"search":searchtext};
+      this.fetchResults();
+    },
+
+    onDeletion: function() {
+      console.log("here");
+    	//Send DELETE request to backend
+    	for (key in this.checkedItems) {
+    		for (i in this.strategies) {		
+    			if (key == this.strategies[i]._id && this.checkedItems[key]==true) {
+    				this.deleteId = this.strategies[i]._id;
+    				this.$.deleteStrategyQuery.generateRequest();
+    				//this.splice('strategies', i, 1);
+    				//this.checkedCount -= 1;
     			}
     		}
-    	},
+		}
+
+		this.deleteId = "";	        	
+    },
+
+    onDeleteStrategyError: function() {
+
+    },
+
+    onDeleteStrategyResponse: function(data) {
+    	var idDeleted = data.detail.response.id;
+    	for (i in this.strategies) {	
+  			if (idDeleted == this.strategies[i]._id) {
+  				this.splice('strategies', i, 1);
+  				this.checkedCount -= 1;
+  			}
+  		}
+  	},
+
+    _createChanged: function(nCreate, oCreate) {
+      console.log("Here Create Changed");
+      console.log(nCreate);
+      if(nCreate=="1") {
+        console.log("Firing Event");
+        this.fire('newClicked');
+        this.create = 0; 
+      }
+    },
+
+    fetchResults: function() {
+        if (this.$.authItem.checkHasToken()) { 
+          console.log("but not here");
+          this.header = this.$.authItem.getHeader();
+          var APIEndPoint = new Polymer.IronMetaQuery({key: 'APIEndPoint'}).value;
+          this.$.getStrategiesQuery.url = APIEndPoint+'/strategy';
+          this.$.getStrategiesQuery.generateRequest();
+        }
+    },
+
+    hasTail: function(tail) {
+      if(tail && tail.path) {
+        return tail.path.length > 0;
+      }
+
+      return false;
+    },
+
+    isActive: function(active, subroute) {
+      return active && !this.hasTail(subroute);
+    },
+
+    _activeChanged: function(active, subroute) {
+      console.log("Here in Editor home Active");
+      if(active && !this.hasTail(subroute)) {
+        console.log(this.queryParams);
+        
+        if(this.queryParams && this.queryParams.create) {
+          this.create = this.queryParams.create;
+        } 
+
+        this.fetchResults();
+
+      } else {
+        this.strategies = [];
+      }
+    }
 
 	});
   </script>
